@@ -1,5 +1,12 @@
 2006-12-17  Scott James Remnant  <scott@netsplit.com>
 
+	* upstart/wire.c (upstart_write_packv, upstart_write_pack) 
+	(upstart_read_packv, upstart_read_pack): Functions to write a pack
+	of different variables to the stream, or read them from it
+	* upstart/wire.h: Add prototypes.
+	* upstart/tests/test_wire.c (test_write_pack, test_read_pack):
+	Check we can read and write a pack of variables at once.
+
 	* upstart/wire.c (upstart_write_header, upstart_read_header): Drop
 	the version from the header, we'll just keep the protocol always
 	backwards compatible.
